fix: Improve the contrast of grey

--- a/_sass/minima/_vars.scss
+++ b/_sass/minima/_vars.scss
@@ -8,11 +8,11 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
+$text-color:       #111111 !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
-$grey-color:       #828282 !default;
+$grey-color:       #757575 !default;
 $grey-color-light: color.adjust($grey-color, $lightness: 40%) !default;
 $grey-color-dark:  color.adjust($grey-color, $lightness: -25%) !default;
 
